@@ -1,3 +1,9 @@
+2008-10-28  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR6964, from Wenji Huang <wenji.huang@oracle.com>:
+	* mainloop.c (start_cmd, stp_main_loop): Temporarily
+	disable ptrace calls.
+
 2008-10-15  Frank Ch. Eigler  <fche@elastic.org>
 
 	* mainloop.c (start_cmd): Fix wordexp error handling.
